--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,10 @@
 name: Build, QA, Release
 
-on:
- - push
- - workflow_dispatch
+on: push
+
+permissions:
+  pages: write
+  id-token: write
 
 jobs:
   build_font:
